--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.5.1",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,6 +24,9 @@
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "next-themes": "^0.2.1",
+    "openai": "^4.16.1",
+    "openai-api": "^1.3.1",
+    "openai-api-node": "^1.0.0",
     "react": "^18",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
@@ -40,7 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "prisma": "^5.5.1",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
